feat: create pages default layout

--- a/index.html
+++ b/index.html
@@ -2,7 +2,15 @@
 <html lang="pt-br">
 <head>
     <title>Expressados</title>
+    <link rel="stylesheet" href="CSS/Style.css">
 </head>
 <body>
+    <header>
+        <ul>
+            <li><a href="index.html"></a></li>
+            <li><a href="pages/contatos.html"></a></li>
+            <li><a href="pages/cardapio.html"></a></li>
+        </ul>
+    </header>
 </body>
 </html>
