add images, logotype and h1s

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
 <body>
     <header>
         <ul>
-            <li><a href="index.html"></a></li>
-            <li><a href="pages/contatos.html"></a></li>
-            <li><a href="pages/cardapio.html"></a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="pages/contatos.html">Contatos</a></li>
+            <li><a href="pages/cardapio.html">Cardapio</a></li>
         </ul>
+        
+        <img src="/img/expressados logo.PNG" alt="">
     </header>
+    <h1>Bem-vindo à Expressados café</h1>
 </body>
 </html>
