--- a/pages/contatos.html
+++ b/pages/contatos.html
@@ -2,15 +2,18 @@
 <html lang="pt-br">
 <head>
     <title>Expressados</title>
-    <link rel="stylesheet" href="../CSS/Style.css">
+    <link rel="stylesheet" href="CSS/Style.css">
 </head>
 <body>
     <header>
         <ul>
-            <li><a href="../index.html"></a></li>
-            <li><a href="contatos.html"></a></li>
-            <li><a href="cardapio.html"></a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="contatos.html">Contatos</a></li>
+            <li><a href="cardapio.html">Cardapio</a></li>
+
+            <img src="/img/expressados logo.PNG" alt="">
         </ul>
     </header>
+    <h1>Entre em contato!</h1>
 </body>
 </html>
