--- a/pages/cardapio.html
+++ b/pages/cardapio.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <title>Expressados</title>
-    <link rel="stylesheet" href="../CSS/Style.css">
+    <link rel="stylesheet" href="CSS/Style.css">
 </head>
 <body>
     <header>
         <ul>
-            <li><a href="../index.html"></a></li>
-            <li><a href="contatos.html"></a></li>
-            <li><a href="cardapio.html"></a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="contatos.html">Contatos</a></li>
+            <li><a href="cardapio.html">Cardapio</a></li>
         </ul>
+        
+        <img src="/img/expressados logo.PNG" alt="">
     </header>
+    <h1>Nosso Cardapio </h1>
 </body>
 </html>
