feat: add images at img and add some stuff to cardapio

--- a/index.html
+++ b/index.html
@@ -6,14 +6,29 @@
 </head>
 <body>
     <header>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="pages/contatos.html">Contatos</a></li>
-            <li><a href="pages/cardapio.html">Cardapio</a></li>
-        </ul>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="pages/contatos.html">Contatos</a>
+        <a href="pages/cardapio.html">Cardapio</a>
         
-        <img src="/img/expressados logo.PNG" alt="">
+        <img src="/img/expressados logo.PNG" alt="loguinhotop">
+    </nav>
     </header>
+
     <h1>Bem-vindo à Expressados café</h1>
+
+    <h2>Bem-vindo ao Expressos Cafe, o seu refúgio para um momento de pausa e relaxamento.</h2>
+    <p>Nossa cafeteria é um espaço acolhedor e aconchegante, onde você pode desfrutar de uma variedade de bebidas e pratos deliciosos,
+    <br> preparados com amor e carinho. Desde o primeiro café da manhã até o último lanche da noite, <br>
+    estamos comprometidos em oferecer uma experiência única e agradável para nossos clientes. <br>
+    Venha conhecer nosso ambiente agradável e permita-se ser surpreendido pelo nosso serviço atencioso e nossa paixão por café.</p>
+    <hr>
+    <p>Este é o nosso estabelecimento em Valinhos-SP:</p>
+    <hr>
+    <img src="/img/expressados frente.PNG" alt="faixadinhatop">
+
+    <footer>
+
+    </footer>
 </body>
 </html>
