add some stuff on contatos page

--- a/pages/contatos.html
+++ b/pages/contatos.html
@@ -6,14 +6,44 @@
 </head>
 <body>
     <header>
-        <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="contatos.html">Contatos</a></li>
-            <li><a href="cardapio.html">Cardapio</a></li>
+        <nav>
+            <a href="../index.html">Home</a>
+            <a href="contatos.html">Contatos</a>
+            <a href="cardapio.html">Cardapio</a>
 
-            <img src="/img/expressados logo.PNG" alt="">
-        </ul>
+            <img src="/img/expressados logo.PNG" alt="logo">
+    </nav>
     </header>
-    <h1>Entre em contato!</h1>
+    <h1 class="titulo"> Entre em contato</h1>
+    <div class="texto">
+            <p>Caso queira entrar contatar nossa equipe, temosdisponiveis nossas redes sociais, <br>
+            nela duvidas podem ser tiradas e até mesmo encomendas podem ser feitas!!! <br>
+            venha nos conhecer.
+        </p>
+    </div>
+
+    <div class="instagram">
+        <h2>Instagram</h2>
+        <h3>Clique no icone e nos siga</h3>
+        <a href="https://www.instagram.com/richardrios.m?" class="instagram-link">
+            <img src="../img/logo-insta.png" alt="foto-insta">
+        </a>
+    </div>
+
+    <div class="facebook">
+        <h2>Facebook</h2>
+        <h3>Conheça nossa pagina</h3>
+        <a href="https://www.instagram.com/richardrios.m?" class="facebook-link">
+            <img src="../img/logo-facebook.png" alt="foto-face">
+        </a>
+    </div>
+
+    <div class="telefone">
+        <h2>19 998215600</h2>
+        <img src="../img/telefone-logo.png" alt="foto-telefone">
+    </div>
+    <footer>
+        
+    </footer>
 </body>
 </html>
