feat: add imgs to code and start footer

--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
     Venha conhecer nosso ambiente agradável e permita-se ser surpreendido pelo nosso serviço atencioso e nossa paixão por café.</p>
     <hr>
     <p>Este é o nosso estabelecimento em Valinhos-SP:</p>
-    <hr>
+    <br>
     <img src="/img/expressados frente.PNG" alt="faixadinhatop">
-
+    <hr>
     <footer>
-
+        <p>Nós somos a Expressados Café, venha nos conhecer!!! <br><br> Ruas dos Bobos, número 0 <br> Valinhos-SP</p>
+        <img src="img/expressados logo.PNG" alt="">
     </footer>
 </body>
 </html>
