--- a/pages/cardapio.html
+++ b/pages/cardapio.html
@@ -21,39 +21,68 @@
 
     <section>
     <ul>
+        <h2>Pratos:</h2>
         <li>
-            <div></div>
+            <div>
+                <img src="../img/coxinha.PNG" alt="">
+            </div>
         </li>
         <li>
-            <div></div>
+            <div>
+                <img src="../img/croisant.PNG" alt="">
+            </div>
         </li>
         <li>
-            <div></div>
+            <div>
+                <img src="../img/Capturar.PNG" alt="">
+            </div>
         </li>
         <li>
-            <div></div>
+            <div>
+                <img src="../img/torta de limao.PNG" alt="">
+            </div>
         </li>
         <li>
-            <div></div>
-        </li>
-        <li>
-            <div></div>
-        </li>
-        <li>
-            <div></div>
-        </li>
-        <li>
-            <div></div>
-        </li>
-        <li>
-            <div></div>
-        </li>
-        <li>
-            <div></div>
+            <div>
+                <img src="../img/torta de morango.PNG" alt="">
+            </div>
         </li>
     </ul>
+
+    <ul>
+        <h2>Bebidas:</h2>
+        <li>
+            <div>
+                <img src="../img/cafegelado.PNG" alt="">
+            </div>
+        </li>
+        <li>
+            <div>
+                <img src="../img/cafecomleite.PNG" alt="">
+            </div>
+        </li>
+        <li>
+            <div>
+                <img src="../img/expresso.PNG" alt="">
+            </div>
+        </li>
+        <li>
+            <div>
+                <img src="../img/guarana.PNG" alt="">
+            </div>
+        </li>
+        <li>
+            <div>
+                <img src="../img/jugo di naranja.PNG" alt="">
+            </div>
+        </li>
+    </ul>
+    
     </section>
 
-    <footer></footer>
+    <footer>
+        <p>Nós somos a Expressados Café, venha nos conhecer!!! <br><br> Ruas dos Bobos, número 0 <br> Valinhos-SP</p>
+        <img src="img/expressados logo.PNG" alt="">
+    </footer>
 </body>
 </html>
