--- a/pages/contatos.html
+++ b/pages/contatos.html
@@ -22,6 +22,27 @@
         </p>
     </div>
 
+    <form action="#" method="post" class="contact-form">
+        <div class="form-group">
+            <label for="name" class="form-label">Nome:</label>
+            <input type="text" id="name" name="name" class="form-input" required>
+        </div>
+
+
+        <div class="form-group">
+            <label for="email" class="form-label">Email:
+            </label><input type="email" id="email" name="email" class="form-input" required>
+        </div>
+
+
+        <div class="form-group">
+            <label for="message" class="form-label">Mensagem:</label>
+            <textarea name="message" id="message" cols="20" rows="10" class="form-textarea" required></textarea>
+        </div>
+        <button type="submit" class="form-button">Enviar</button>
+    </form>
+
+
     <div class="instagram">
         <h2>Instagram</h2>
         <h3>Clique no icone e nos siga</h3>
@@ -42,8 +63,13 @@
         <h2>19 998215600</h2>
         <img src="../img/telefone-logo.png" alt="foto-telefone">
     </div>
+
+
+
+    <hr>
     <footer>
-        
+        <p>localização: Rua Alves Pinto Aventador <br>
+        email: giovanni.ggoncalves@outlook.com</p>
     </footer>
 </body>
 </html>
