--- a/pages/contatos.html
+++ b/pages/contatos.html
@@ -2,10 +2,10 @@
 <html lang="pt-br">
 <head>
     <title>Expressados</title>
-    <link rel="stylesheet" href="CSS/Style.css">
+    <link rel="stylesheet" href="../CSS/Style.css">
 </head>
 <body>
-    <header>
+    <header class="site-header">
         <nav>
             <a href="../index.html">Home</a>
             <a href="contatos.html">Contatos</a>
