feat: started CSS

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <link rel="stylesheet" href="./CSS/Style.css">
 </head>
 <body>
-    <header class="site-header">
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="pages/contatos.html">Contatos</a>
-        <a href="pages/cardapio.html">Cardapio</a>
+    <header>
+    <nav class="site-header">
+        <a href="index.html" class="nav-link">Home</a>
+        <a href="pages/contatos.html" class="nav-link">Contatos</a>
+        <a href="pages/cardapio.html" class="nav-link">Cardapio</a>
         
         <img src="/img/expressados logo.PNG" alt="loguinhotop">
     </nav>
