--- a/pages/cardapio.html
+++ b/pages/cardapio.html
@@ -5,11 +5,11 @@
     <link rel="stylesheet" href="../CSS/Style.css">
 </head>
 <body>
-    <header class="site-header">
-        <nav>
-        <a href="../index.html">Home</a>
-        <a href="contatos.html">Contatos</a>
-        <a href="cardapio.html">Cardápio</a>
+    <header>
+    <nav class="site-header">
+        <a href="../index.html" class="nav-link">Home</a>
+        <a href="contatos.html" class="nav-link">Contatos</a>
+        <a href="cardapio.html" class="nav-link">Cardápio</a>
     
         <img src="/img/expressados logo.PNG" alt="">
     </nav>
