--- a/pages/contatos.html
+++ b/pages/contatos.html
@@ -5,11 +5,11 @@
     <link rel="stylesheet" href="../CSS/Style.css">
 </head>
 <body>
-    <header class="site-header">
-        <nav>
-            <a href="../index.html">Home</a>
-            <a href="contatos.html">Contatos</a>
-            <a href="cardapio.html">Cardapio</a>
+    <header>
+    <nav class="site-header">
+            <a href="../index.html" class="nav-link">Home</a>
+            <a href="contatos.html" class="nav-link">Contatos</a>
+            <a href="cardapio.html" class="nav-link">Cardapio</a>
 
             <img src="/img/expressados logo.PNG" alt="logo">
     </nav>
@@ -68,8 +68,8 @@
 
     <hr>
     <footer>
-        <p>localização: Rua Alves Pinto Aventador <br>
-        email: giovanni.ggoncalves@outlook.com</p>
+        <p>Nós somos a Expressados Café, venha nos conhecer!!! <br><br> Ruas dos Bobos, número 0 <br> Valinhos-SP</p>
+        <img src="img/expressados logo.PNG" alt="">
     </footer>
 </body>
 </html>
