feat: add menu css

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <a href="pages/contatos.html" class="nav-link">Contatos</a>
         <a href="pages/cardapio.html" class="nav-link">Cardapio</a>
         
-        <img src="/img/expressados logo.PNG" alt="loguinhotop">
+        <img src="/img/expressados logo.PNG" alt="loguinhotop" class="loguinhotop">
     </nav>
     </header>
 
