--- a/pages/cardapio.html
+++ b/pages/cardapio.html
@@ -32,7 +32,7 @@
         </li>
         <li>
             <div>
-                <img src="../img/croisant.PNG" alt="">
+                <img src="../img/croisant.PNG" alt="" class="loguinhotop">
             </div>
         </li>
         <li>
