--- a/pages/contatos.html
+++ b/pages/contatos.html
@@ -11,7 +11,7 @@
             <a href="contatos.html" class="nav-link">Contatos</a>
             <a href="cardapio.html" class="nav-link">Cardapio</a>
 
-            <img src="/img/expressados logo.PNG" alt="logo">
+            <img src="/img/expressados logo.PNG" alt="logo" class="loguinhotop">
     </nav>
     </header>
     <h1 class="titulo"> Entre em contato</h1>
