--- a/pages/cardapio.html
+++ b/pages/cardapio.html
@@ -25,7 +25,7 @@
         <li>
             <div>
                 <img src="../img/coxinha.PNG" alt="">
-                <h3>COXINA DE FRANGO</h3>
+                <h3>COXINHA DE FRANGO</h3>
                 <h4>7,99</h4>
                 <P>Massa de mandioca com recheio de frango com catupiry</P>
             </div>
