--- a/pages/cardapio.html
+++ b/pages/cardapio.html
@@ -32,13 +32,10 @@
         </li>
         <li>
             <div>
-<<<<<<< Updated upstream
-                <img src="../img/croisant.PNG" alt="" class="loguinhotop">
-=======
                 <img src="../img/croisant.PNG" alt="">
                 <h3>CROISANT</h3>
-                
->>>>>>> Stashed changes
+                <h4>10,00</h4>
+                <p>bla bla bla bla bla</p>
             </div>
         </li>
         <li>
