fix: logo class and orthographic issues

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <nav class="site-header">
         <a href="index.html" class="nav-link">Home</a>
         <a href="pages/contatos.html" class="nav-link">Contatos</a>
-        <a href="pages/cardapio.html" class="nav-link">Cardapio</a>
+        <a href="pages/cardapio.html" class="nav-link">Cardápio</a>
         
         <img src="/img/expressados logo.PNG" alt="loguinhotop" class="loguinhotop">
     </nav>
