--- a/pages/cardapio.html
+++ b/pages/cardapio.html
@@ -11,7 +11,7 @@
         <a href="contatos.html" class="nav-link">Contatos</a>
         <a href="cardapio.html" class="nav-link">Cardápio</a>
     
-        <img src="/img/expressados logo.PNG" alt="">
+        <img src="/img/expressados logo.PNG" alt="" class="loguinhotop">
     </nav>
     </header>
     
