--- a/pages/contatos.html
+++ b/pages/contatos.html
@@ -9,7 +9,7 @@
     <nav class="site-header">
             <a href="../index.html" class="nav-link">Home</a>
             <a href="contatos.html" class="nav-link">Contatos</a>
-            <a href="cardapio.html" class="nav-link">Cardapio</a>
+            <a href="cardapio.html" class="nav-link">Cardápio</a>
 
             <img src="/img/expressados logo.PNG" alt="logo" class="loguinhotop">
     </nav>
