feat: add dishes and drinks descriptions

--- a/pages/cardapio.html
+++ b/pages/cardapio.html
@@ -26,7 +26,7 @@
             <div>
                 <img src="../img/coxinha.PNG" alt="">
                 <h3>COXINHA DE FRANGO</h3>
-                <h4>7,99</h4>
+                <h4>R$ 7,99</h4>
                 <P>Massa de mandioca com recheio de frango com catupiry</P>
             </div>
         </li>
@@ -34,23 +34,32 @@
             <div>
                 <img src="../img/croisant.PNG" alt="">
                 <h3>CROISANT</h3>
-                <h4>10,00</h4>
-                <p>bla bla bla bla bla</p>
+                <h4>R$ 10,00</h4>
+                <p>Massa foleada de origem francesa que foi trazida por passarinho</p>
             </div>
         </li>
         <li>
             <div>
                 <img src="../img/Capturar.PNG" alt="">
+                <h3>Pão de Queijo</h3>
+                <h4>R$ 2,50 (unidade)</h4>
+                <p>Recheio de queijo com sabor único, sô!</p>
             </div>
         </li>
         <li>
             <div>
                 <img src="../img/torta de limao.PNG" alt="">
+                <h3>Torta de Limão</h3>
+                <h4>R$ 8,00 (fatia)</h4>
+                <p>Pedaço saboroso do céu azedinho</p>
             </div>
         </li>
         <li>
             <div>
                 <img src="../img/torta de morango.PNG" alt="">
+                <h3>Torta de Morango</h3>
+                <h4>R$ 8,00 (fatia)</h4>
+                <p>Pedaço saboroso da fazenda docinho</p>
             </div>
         </li>
     </ul>
@@ -60,26 +69,41 @@
         <li>
             <div>
                 <img src="../img/cafegelado.PNG" alt="">
+                <h3>Café Gelado</h3>
+                <h4>R$ 13,00</h4>
+                <p>Sabor único de Minas Gerais</p>
             </div>
         </li>
         <li>
             <div>
                 <img src="../img/cafecomleite.PNG" alt="">
+                <h3>Café com Leite</h3>
+                <h4>R$ 8,00</h4>
+                <p>A combinação perfeita</p>
             </div>
         </li>
         <li>
             <div>
                 <img src="../img/expresso.PNG" alt="">
+                <h3>Café Expresso</h3>
+                <h4>R$ 4,00</h4>
+                <p>O tradicional que a família brasileira ama</p>
             </div>
         </li>
         <li>
             <div>
                 <img src="../img/guarana.PNG" alt="">
+                <h3>Guaraná</h3>
+                <h4>R$ 6,00</h4>
+                <p>Soy loca por pipoca y Guaraná</p>
             </div>
         </li>
         <li>
             <div>
                 <img src="../img/jugo di naranja.PNG" alt="">
+                <h3>Suco de Laranja</h3>
+                <h4>R$ 8,00</h4>
+                <p>Só o bagaço, quer peneira vai jogar bola!</p>
             </div>
         </li>
     </ul>
