feat: started dishes css

--- a/pages/cardapio.html
+++ b/pages/cardapio.html
@@ -23,43 +23,43 @@
     <ul>
         <h2>Pratos:</h2>
         <li>
-            <div>
-                <img src="../img/coxinha.PNG" alt="">
-                <h3>COXINHA DE FRANGO</h3>
-                <h4>R$ 7,99</h4>
-                <P>Massa de mandioca com recheio de frango com catupiry</P>
+            <div class="prato">
+                <img src="../img/coxinha.PNG" alt="" class="foto-prato">
+                <h3 class="nome-prato">COXINHA DE FRANGO</h3>
+                <h4 class="preco-prato">R$ 7,99</h4>
+                <p class="descricao-prato">Massa de mandioca com recheio de frango com catupiry</p>
             </div>
         </li>
         <li>
-            <div>
-                <img src="../img/croisant.PNG" alt="">
-                <h3>CROISANT</h3>
-                <h4>R$ 10,00</h4>
-                <p>Massa foleada de origem francesa que foi trazida por passarinho</p>
+            <div class="prato">
+                <img src="../img/croisant.PNG" alt="" class="foto-prato">
+                <h3 class="nome-prato">CROISANT</h3>
+                <h4 class="preco-prato">R$ 10,00</h4>
+                <p class="descricao-prato">Massa foleada de origem francesa que foi trazida por passarinho</p>
             </div>
         </li>
         <li>
-            <div>
-                <img src="../img/Capturar.PNG" alt="">
-                <h3>Pão de Queijo</h3>
-                <h4>R$ 2,50 (unidade)</h4>
-                <p>Recheio de queijo com sabor único, sô!</p>
+            <div class="prato">
+                <img src="../img/Capturar.PNG" alt="" class="foto-prato">
+                <h3 class="nome-prato">Pão de Queijo</h3>
+                <h4 class="preco-prato">R$ 2,50 (unidade)</h4>
+                <p class="descricao-prato">Recheio de queijo com sabor único, sô!</p>
             </div>
         </li>
         <li>
-            <div>
-                <img src="../img/torta de limao.PNG" alt="">
-                <h3>Torta de Limão</h3>
-                <h4>R$ 8,00 (fatia)</h4>
-                <p>Pedaço saboroso do céu azedinho</p>
+            <div class="prato">
+                <img src="../img/torta de limao.PNG" alt="" class="foto-prato">
+                <h3 class="nome-prato">Torta de Limão</h3>
+                <h4 class="preco-prato">R$ 8,00 (fatia)</h4>
+                <p class="descricao-prato">Pedaço saboroso do céu azedinho</p>
             </div>
         </li>
         <li>
-            <div>
-                <img src="../img/torta de morango.PNG" alt="">
-                <h3>Torta de Morango</h3>
-                <h4>R$ 8,00 (fatia)</h4>
-                <p>Pedaço saboroso da fazenda docinho</p>
+            <div class="prato">
+                <img src="../img/torta de morango.PNG" alt="" class="foto-prato">
+                <h3 class="nome-prato">Torta de Morango</h3>
+                <h4 class="preco-prato">R$ 8,00 (fatia)</h4>
+                <p class="descricao-prato">Pedaço saboroso da fazenda docinho</p>
             </div>
         </li>
     </ul>
@@ -67,43 +67,43 @@
     <ul>
         <h2>Bebidas:</h2>
         <li>
-            <div>
-                <img src="../img/cafegelado.PNG" alt="">
-                <h3>Café Gelado</h3>
-                <h4>R$ 13,00</h4>
-                <p>Sabor único de Minas Gerais</p>
+            <div class="prato">
+                <img src="../img/cafegelado.PNG" alt="" class="foto-prato">
+                <h3 class="nome-prato">Café Gelado</h3>
+                <h4 class="preco-prato">R$ 13,00</h4>
+                <p class="descricao-prato">Sabor único de Minas Gerais</p>
             </div>
         </li>
         <li>
-            <div>
-                <img src="../img/cafecomleite.PNG" alt="">
-                <h3>Café com Leite</h3>
-                <h4>R$ 8,00</h4>
-                <p>A combinação perfeita</p>
+            <div class="prato">
+                <img src="../img/cafecomleite.PNG" alt="" class="foto-prato">
+                <h3 class="nome-prato">Café com Leite</h3>
+                <h4 class="preco-prato">R$ 8,00</h4>
+                <p class="descricao-prato">A combinação perfeita</p>
             </div>
         </li>
         <li>
-            <div>
-                <img src="../img/expresso.PNG" alt="">
-                <h3>Café Expresso</h3>
-                <h4>R$ 4,00</h4>
-                <p>O tradicional que a família brasileira ama</p>
+            <div class="prato">
+                <img src="../img/expresso.PNG" alt="" class="foto-prato">
+                <h3 class="nome-prato">Café Expresso</h3>
+                <h4 class="preco-prato">R$ 4,00</h4>
+                <p class="descricao-prato">O tradicional que a família brasileira ama</p>
             </div>
         </li>
         <li>
-            <div>
-                <img src="../img/guarana.PNG" alt="">
-                <h3>Guaraná</h3>
-                <h4>R$ 6,00</h4>
-                <p>Soy loca por pipoca y Guaraná</p>
+            <div class="prato">
+                <img src="../img/guarana.PNG" alt="" class="foto-prato">
+                <h3 class="nome-prato">Guaraná</h3>
+                <h4 class="preco-prato">R$ 6,00</h4>
+                <p class="descricao-prato">Soy loca por pipoca y Guaraná</p>
             </div>
         </li>
         <li>
-            <div>
-                <img src="../img/jugo di naranja.PNG" alt="">
-                <h3>Suco de Laranja</h3>
-                <h4>R$ 8,00</h4>
-                <p>Só o bagaço, quer peneira vai jogar bola!</p>
+            <div class="prato">
+                <img src="../img/jugo di naranja.PNG" alt="" class="foto-prato">
+                <h3 class="nome-prato">Suco de Laranja</h3>
+                <h4 class="preco-prato">R$ 8,00</h4>
+                <p class="descricao-prato">Só o bagaço, quer peneira vai jogar bola!</p>
             </div>
         </li>
     </ul>
