feat: edit image

--- a/pages/contatos.html
+++ b/pages/contatos.html
@@ -42,7 +42,7 @@
         <button type="submit" class="form-button">Enviar</button>
     </form>
 
-
+    <div class="flexbox">
     <div class="instagram">
         <h2>Instagram</h2>
         <h3>Clique no icone e nos siga</h3>
@@ -63,7 +63,7 @@
         <h2>19 998215600</h2>
         <img src="../img/telefone-logo.png" alt="foto-telefone">
     </div>
-
+    </div>
 
 
     <hr>
