feat: create footer

--- a/index.html
+++ b/index.html
@@ -1,35 +1,47 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <title>Expressados</title>
     <link rel="stylesheet" href="./CSS/Style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet" h>
 </head>
+
 <body>
     <header>
-    <nav class="site-header">
-        <a href="index.html" class="nav-link">Home</a>
-        <a href="pages/contatos.html" class="nav-link">Contatos</a>
-        <a href="pages/cardapio.html" class="nav-link">Cardápio</a>
-        
-        <img src="/img/expressados logo.PNG" alt="loguinhotop" class="loguinhotop">
-    </nav>
+        <nav class="site-header">
+            <a href="index.html" class="nav-link">Home</a>
+            <a href="pages/contatos.html" class="nav-link">Contatos</a>
+            <a href="pages/cardapio.html" class="nav-link">Cardápio</a>
+
+            <img src="/img/expressados logo.PNG" alt="loguinhotop" class="loguinhotop">
+        </nav>
     </header>
 
     <h1>Bem-vindo à Expressados café</h1>
 
-    <h2>Bem-vindo ao Expressos Cafe, o seu refúgio para um momento de pausa e relaxamento.</h2>
-    <p>Nossa cafeteria é um espaço acolhedor e aconchegante, onde você pode desfrutar de uma variedade de bebidas e pratos deliciosos,
-    <br> preparados com amor e carinho. Desde o primeiro café da manhã até o último lanche da noite, <br>
-    estamos comprometidos em oferecer uma experiência única e agradável para nossos clientes. <br>
-    Venha conhecer nosso ambiente agradável e permita-se ser surpreendido pelo nosso serviço atencioso e nossa paixão por café.</p>
-    <hr>
-    <p>Este é o nosso estabelecimento em Valinhos-SP:</p>
-    <br>
-    <img src="/img/expressados frente.PNG" alt="faixadinhatop">
-    <hr>
-    <footer>
-        <p>Nós somos a Expressados Café, venha nos conhecer!!! <br><br> Ruas dos Bobos, número 0 <br> Valinhos-SP</p>
-        <img src="img/expressados logo.PNG" alt="">
+    <section class="home-content">
+        <h2>Bem-vindo ao Expressos Cafe, o seu refúgio para um momento de pausa e relaxamento.</h2>
+        <p>Nossa cafeteria é um espaço acolhedor e aconchegante, onde você pode desfrutar de uma variedade de bebidas e
+            pratos deliciosos,
+            <br> preparados com amor e carinho. Desde o primeiro café da manhã até o último lanche da noite, <br>
+            estamos comprometidos em oferecer uma experiência única e agradável para nossos clientes. <br>
+            Venha conhecer nosso ambiente agradável e permita-se ser surpreendido pelo nosso serviço atencioso e nossa
+            paixão por café.
+        </p>
+        <hr>
+        <p>Este é o nosso estabelecimento em Valinhos-SP:</p>
+        <br>
+        <img src="/img/expressados frente.PNG" alt="faixadinhatop" class="fachada">
+    </section>
+    <footer class="rodape">
+        <p class="footer-strong">Expressados Café</p>
+        <p>Ruas dos Bobos, número 0</p>
+        <p>Valinhos-SP</p>
+        <img src="img/expressados logo.PNG" alt="" class="loguinhotop2">
     </footer>
 </body>
+
 </html>
