--- a/pages/contatos.html
+++ b/pages/contatos.html
@@ -67,9 +67,11 @@
 
 
     <hr>
-    <footer>
-        <p>Nós somos a Expressados Café, venha nos conhecer!!! <br><br> Ruas dos Bobos, número 0 <br> Valinhos-SP</p>
-        <img src="img/expressados logo.PNG" alt="">
+    <footer class="rodape">
+        <p>Expressados Café</p>
+        <p>Ruas dos Bobos, número 0</p>
+        <p>Valinhos-SP</p>
+        <img src="../img/expressados logo.PNG" alt="" class="loguinhotop2">
     </footer>
 </body>
 </html>
