feat: css in contatos

--- a/index.html
+++ b/index.html
@@ -6,18 +6,19 @@
     <link rel="stylesheet" href="./CSS/Style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet" h>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <header>
-        <nav class="site-header">
+    <header class="site-header">
+        <nav>
             <a href="index.html" class="nav-link">Home</a>
             <a href="pages/contatos.html" class="nav-link">Contatos</a>
             <a href="pages/cardapio.html" class="nav-link">Cardápio</a>
-
-            <img src="/img/expressados logo.PNG" alt="loguinhotop" class="loguinhotop">
         </nav>
+        <div class="loguinhotop">
+            <img src="/img/expressados logo.PNG" alt="loguinhotop" class="logo-header">
+        </div>
     </header>
 
     <h1>Bem-vindo à Expressados café</h1>
