--- a/pages/cardapio.html
+++ b/pages/cardapio.html
@@ -5,14 +5,16 @@
     <link rel="stylesheet" href="../CSS/Style.css">
 </head>
 <body>
-    <header>
-    <nav class="site-header">
+    <header class="site-header">
+    <nav>
         <a href="../index.html" class="nav-link">Home</a>
         <a href="contatos.html" class="nav-link">Contatos</a>
         <a href="cardapio.html" class="nav-link">Cardápio</a>
     
-        <img src="/img/expressados logo.PNG" alt="" class="loguinhotop">
     </nav>
+    <div class="loguinhotop">
+        <img src="/img/expressados logo.PNG" alt="loguinhotop" class="logo-header">
+    </div>
     </header>
     
     <h1>Nosso Cardápio</h1>
