--- a/pages/contatos.html
+++ b/pages/contatos.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <title>Expressados</title>
     <link rel="stylesheet" href="../CSS/Style.css">
 </head>
+
 <body>
-    <header>
-    <nav class="site-header">
+    <header class="site-header">
+        <nav>
             <a href="../index.html" class="nav-link">Home</a>
             <a href="contatos.html" class="nav-link">Contatos</a>
             <a href="cardapio.html" class="nav-link">Cardápio</a>
-
-            <img src="/img/expressados logo.PNG" alt="logo" class="loguinhotop">
-    </nav>
+        </nav>
+        <div class="loguinhotop">
+            <img src="/img/expressados logo.PNG" alt="loguinhotop" class="logo-header">
+        </div>
     </header>
+<section class="contatos-main">
     <h1 class="titulo"> Entre em contato</h1>
     <div class="texto">
-            <p>Caso queira entrar contatar nossa equipe, temosdisponiveis nossas redes sociais, <br>
+        <p>Caso queira entrar contatar nossa equipe, temosdisponiveis nossas redes sociais, <br>
             nela duvidas podem ser tiradas e até mesmo encomendas podem ser feitas!!! <br>
             venha nos conhecer.
         </p>
@@ -28,12 +32,10 @@
             <input type="text" id="name" name="name" class="form-input" required>
         </div>
 
-
         <div class="form-group">
             <label for="email" class="form-label">Email:
             </label><input type="email" id="email" name="email" class="form-input" required>
         </div>
-
 
         <div class="form-group">
             <label for="message" class="form-label">Mensagem:</label>
@@ -41,32 +43,31 @@
         </div>
         <button type="submit" class="form-button">Enviar</button>
     </form>
+</section>
 
-    <div class="flexbox">
-    <div class="instagram">
-        <h2>Instagram</h2>
-        <h3>Clique no icone e nos siga</h3>
-        <a href="https://www.instagram.com/richardrios.m?" class="instagram-link">
-            <img src="../img/logo-insta.png" alt="foto-insta">
-        </a>
-    </div>
+    <section class="redes">
+        <div class="instagram">
+            <h2>Instagram</h2>
+            <h3>Clique no icone e nos siga</h3>
+            <a href="https://www.instagram.com/richardrios.m?" class="instagram-link">
+                <img src="../img/logo-insta.png" alt="foto-insta" class="rede-logo">
+            </a>
+        </div>
 
-    <div class="facebook">
-        <h2>Facebook</h2>
-        <h3>Conheça nossa pagina</h3>
-        <a href="https://www.instagram.com/richardrios.m?" class="facebook-link">
-            <img src="../img/logo-facebook.png" alt="foto-face">
-        </a>
-    </div>
+        <div class="facebook">
+            <h2>Facebook</h2>
+            <h3>Conheça nossa pagina</h3>
+            <a href="https://www.instagram.com/richardrios.m?" class="facebook-link">
+                <img src="../img/logo-facebook.png" alt="foto-face" class="rede-logo">
+            </a>
+        </div>
 
-    <div class="telefone">
-        <h2>19 998215600</h2>
-        <img src="../img/telefone-logo.png" alt="foto-telefone">
-    </div>
-    </div>
+        <div class="telefone">
+            <h2>19 998215600</h2>
+            <img src="../img/telefone-logo.png" alt="foto-telefone" class="rede-logo">
+        </div>
+    </section>
 
-
-    <hr>
     <footer class="rodape">
         <p>Expressados Café</p>
         <p>Ruas dos Bobos, número 0</p>
@@ -74,4 +75,5 @@
         <img src="../img/expressados logo.PNG" alt="" class="loguinhotop2">
     </footer>
 </body>
+
 </html>
