feat: add variables to css

--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
             <a href="pages/contatos.html" class="nav-link">Contatos</a>
             <a href="pages/cardapio.html" class="nav-link">Cardápio</a>
         </nav>
+        <div class="empty"></div>
         <div class="loguinhotop">
             <img src="/img/expressados logo.PNG" alt="loguinhotop" class="logo-header">
         </div>
     </header>
 
-    <h1>Bem-vindo à Expressados café</h1>
+    <h1 class="home-h1">Bem-vindo à Expressados café</h1>
 
-    <section class="home-content">
+    <section class="home-container">
         <h2>Bem-vindo ao Expressos Cafe, o seu refúgio para um momento de pausa e relaxamento.</h2>
         <p>Nossa cafeteria é um espaço acolhedor e aconchegante, onde você pode desfrutar de uma variedade de bebidas e
             pratos deliciosos,
