--- a/pages/contatos.html
+++ b/pages/contatos.html
@@ -13,6 +13,7 @@
             <a href="contatos.html" class="nav-link">Contatos</a>
             <a href="cardapio.html" class="nav-link">Cardápio</a>
         </nav>
+        <div class="empty"></div>
         <div class="loguinhotop">
             <img src="/img/expressados logo.PNG" alt="loguinhotop" class="logo-header">
         </div>
