--- a/pages/cardapio.html
+++ b/pages/cardapio.html
@@ -12,6 +12,7 @@
         <a href="cardapio.html" class="nav-link">Cardápio</a>
     
     </nav>
+    <div class="empty"></div>
     <div class="loguinhotop">
         <img src="/img/expressados logo.PNG" alt="loguinhotop" class="logo-header">
     </div>
