fix: dish-text out of the box

--- a/pages/contatos.html
+++ b/pages/contatos.html
@@ -18,6 +18,7 @@
             <img src="/img/expressados logo.PNG" alt="loguinhotop" class="logo-header">
         </div>
     </header>
+    <div class="contatos-container">
 <section class="contatos-main">
     <h1 class="titulo"> Entre em contato</h1>
     <div class="texto">
@@ -45,6 +46,7 @@
         <button type="submit" class="form-button">Enviar</button>
     </form>
 </section>
+</div>
 
     <section class="redes">
         <div class="instagram">
